assets/css/main.css
  /*----------------------------------------
  Global
  ---------------------------------------- */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
   
  html{
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    color: #555;
  }
  
  body {
    background-color: white;
    width:100vw;
    margin-left:auto;
    margin-right:auto;
    margin-top: 10px;
    margin-bottom: 10px;
    justify-content: left;
    align-items: center;
    text-align: left;
  }

  a {
    color: rgb(37, 37, 172);
  }

  a:active {
    opacity: .5;
  }
  
  ul{
    list-style: square;
    margin-top: 5px;
    margin-left: 20px;
  }
  
  em {
    line-height: 100%;
  }
  
  h1, h2, h3, h4, h5, h6{
    font-family: 'Oswald', sans-serif;
    padding-bottom: 10px;
    padding-top: 20px;
  }

  h3.title{
    color : #131633;
    text-transform: capitalize;
    font-size: 32px;
    margin-bottom: 35px;
    text-align: center;
  }
  hr{
    width: 150px;
    height: 2px;
    background-color: gray;
    border: 0;
    margin: 20px auto;
  }
    /*----------------------------------------
  Title
  ---------------------------------------- */
  .title {
    background-color: #f8c8a1;
    text-align: center;
    border-radius: 15px;
    color: black;
    width: 100%;
  }
  .subtitle {
    width: 100%;
    border-style: solid;
    border-color: black;
    border-width: 1px;
    text-align: center;
    font-size: 1.5rem;
    padding: 3px 10px;
    margin-bottom: 3%;
    align-self: center;
    clear: both;
  }
  .subtitle p {
    font-style: oblique 15deg;
  }
  /*----------------------------------------
  Content
  ---------------------------------------- */

  .content{
    margin: auto;
    width: 80vw;
    justify-content: center;
    align-items: center;
    padding: 15px 15px;
  }
  
  @media(max-width:800px){
    .content {
      width:100vw;
    }
  }

  /*----------------------------------------
  Share buttons
  ---------------------------------------- */
  .share-button {
    margin: auto;
    width: 100%;   
    align-items: center;
    justify-content: center;
    display: flex;
  }
  .share-button a {
    display: inline-flex;
  }

  /*----------------------------------------
  Table style
  ---------------------------------------- */
  th, td {
    border-bottom: 1px solid #ddd;
    text-align: left;
    padding: 8px;
    margin: auto;
    width: 80vw;
  }

  th {
    background-color: rgb(94, 94, 94);
    color: white;
  }

  tr:nth-child(even) {
    background-color: #f2f2f2;
  }

  tr:hover {
    background-color: gray;
    color: #fff;
  } 


  /*----------------------------------------
  Thumbnail style
  ---------------------------------------- */

  .thumbnail-single {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-left:auto;
    margin-right:auto;
    margin-top: 2%;
    margin-bottom: 2%;
    background-size: contain;
    height: auto; 
    width: auto;
  }
  
  .thumbnail-single img {
    width:70vw;
    height: auto;
    border-style: none; 
    border-radius: 20px;
  }

  @media(max-width:800px){
    .thumbnail-single img{
      width:100vw;
      border-radius: 0px;
    }
  }
  /*----------------------------------------
  HEADER
  ---------------------------------------- */
  header{
    background: rgba(4, 39, 78, 0.9);
    position: fixed;
    z-index: 10;
    top: 0;
    left: 0;
    width: 100%;
    color: #fff;
    padding: 0px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  header a{
    text-decoration: none;
    color: white;
    opacity: 1;
    cursor: pointer;
    float: left;
    width: 100%;
    padding: 30px 15px;
    align-items: center;
  }

  header a:hover{
    opacity: 1;
    background-color: rgb(7, 80, 163);
    border-bottom: solid orange;
    transition: 0.15s;
    margin-bottom: -15px;
  }
  
  header ul li {
    display: inline-block;
  }
  header nav {
    font-size: 18px;
    visibility: visible;
    flex-direction: row;
    justify-content: flex-end;
    margin: -15px 10px;
  }
  
  header img {
    height: 100px;
    width: auto;
    margin: -30px 10px;
  }

  #open, .undoer{
    display: none;
  }

  @media(max-width:800px){
    header{
      flex-direction: row;
      flex-basis: 50%;
      justify-content: space-between;
      padding: 8px 8px;
    }
  
    header nav ul {
      right: 18px;
      display: flex;
      position: absolute;
      font-size: 20px;
      top: 60px;
      width: 100%;
      margin: auto;
      background-color: rgba(4, 39, 78, 1);
      flex-direction: column;
      width: 100%;
      align-items: center;
      overflow-y: scroll;
    }
    header nav {
      width: 100%;
      opacity: 1;
      position: absolute;
      top: 28px;
      background: #333;
      visibility: hidden;
      transform: translateX(-100%);
      transition: 280ms ease-out 120ms;
    }


    #open {
      display: flex;
    }

    #open, .undoer {
      font-size: 150%;
      justify-content: center;
      height: 5vh;
    }

    #open:target {
      display: none;
    }
  
    :target + .undoer {
      display: flex;
    }

    :target ~ nav {
      visibility: visible;
      transform: none;
    }

    header nav ul li {
      width: 100%;
    }
    header a{
      font-size: 90%;
      background-color: rgba(0, 0, 0, 0);
    }
    header a:hover{
      opacity: 1;
      background-color: rgba(255, 255, 255, .25);
      border-bottom: none;
      margin: auto;
    }
    header img {
      height: 65px;
      width: auto;
    }
  }

  /*----------------------------------------
  Banner
  ---------------------------------------- */
  #banner{
    width: 100%;
    font-size: 300%;
    background-color: gray;
    color: white;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-image: url("{{ $.Site.Params.banner }}");
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    min-height: 50vh;
  }

  @media(max-width:800px){
    #banner{
      font-size: 150%;
    }
  }

  /*----------------------------------------
  Overlay
  ---------------------------------------- */
  .overlay {
    position: absolute;
    top: 0;
    height: 100%;
    width: 400px;
    opacity: 0;
    transition: .8s ease;
    background-color: #ffffff;
    text-align: center;
    padding: 2rem 1rem;
    color: black;
    font-size: 1.1rem;
  }
  /*----------------------------------------
  List Grid
  ---------------------------------------- */
  .list-grid {
    display: grid;
    gap: 5vh 10vw;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    margin-bottom: 5vw;
    justify-items: center;
  }

  .list-item + img{
    border-radius: 20px;
  }

  .list-grid > div {
    position: relative;
  }

  .list-thumbnail img, .list-item {
    width: 100%;
    height: auto;
    max-height: 300px;
    min-height: 300px;
    min-width: 400px;
    max-width: 400px;
    border-radius: 20px;
    object-fit: cover;
  }
  
  .caption {
    color: #fff;
    transform: translate(0%, -10rem);
    font-size: 120%;
    text-align: center;
    transition: .5s ease;
    padding: 5px 5px;
    margin: 0% 10%;
    background-color: #404040b4;
    border-radius: 10px;
  }

  .list-grid .date{
    padding-left: .1rem;
    margin-top: 1rem;
    text-align: left;
    font-style: oblique 15deg;
  }

  .list-item:hover .overlay {
    opacity: .75;
  }

  .list-item:hover .caption {
    opacity: 0;
  }

  .list-grid a {
    text-decoration: none;
  }

  .list-grid > div {
    height: 200px;
    min-width: 300px;
  }


  @media(max-width:800px){
    .overlay {
      position: relative;
      top: -50%;
      height: 100%;
      width: 400px;
      opacity: 1;
      transition: .8s ease;
      background-color: #f8c8a1;
      text-align: center;
      padding: 5rem 1rem;
      color: black;
      font-size: 1.1rem;
      z-index: -3;
      border-radius: 10px;

    }
    .list-item{
      margin-bottom: 25%;
    }
    .list-grid {
      row-gap: 10rem;
      grid-template-columns: 1fr;
    }
    .caption {
      transform: translate(0%, -15rem);
    }
    .list-item:hover .caption {
      opacity: 1;
    }
  }

  /*----------------------------------------
  Pagination
  ---------------------------------------- */
  .pagination{
    position: relative;
    bottom: -0%;
    margin-top: 5vh;
    text-align: center;
    width: 100%;

  }
  .page-item{
    font-size: 1.5rem;
    list-style: none;
    display: inline-block;
    padding: 5% 2%;
  }

  .pagination a {
    color: #333;
  }

  .pagination a:hover{
    background-color: orange;
    border-radius: 50px;
  }

  .pagination .active {
    background-color: orange;
    border-radius: 50px;
  }
  .pagination .disabled {
    visibility: hidden;
  } 

  @media(max-width:800px){
    .pagination {
      bottom: 0;
      margin-top: 20vh;
    }
  }
  /*----------------------------------------
  Post Footer
  ---------------------------------------- */
  .postfooter {
    text-align: center;
    width: 100%;
    height: 2rem;
    color: #333;
    font-weight: bold;
    font-size: 2vw;
    color: black;
    text-align: center;
    margin-top: 20px;
  }

  .postfooter a {
    text-decoration: none;
    color: black;
    border-radius: 10px;
    padding: .5rem .5rem;
  }

  .postfooter a:hover {
    background-color: #f8c8a1;
  }

  @media(max-width:800px){
    .postfooter {
      bottom: 0;
      font-size: 2.5vw;
    }
    .postfooter a {
      background-color: #f8c8a1;
    }
  }

  /*----------------------------------------
  FOOTER
  ---------------------------------------- */
  
  footer{
    margin-top: auto;
    background-color: #404040;
    color: white;
    padding: 60px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    bottom: 0;
    width: 100%;
    overflow-y: auto;
  }
  
  footer p{
    text-transform: uppercase;
    font-size: 14px;
    color: rgba(255,255,255,6);
    margin-bottom: 10px;
  }
  
  #acknowledgement{
    font-size: 9px;
    font-style: italic;
  }
  
  footer ul{
    margin-bottom: 25px;
    display: flex;
    flex-direction: row;
    list-style: none;
  }
  
  footer ul li {
    margin: 0 8px;
  }
  
  footer ul li a {
    font-size: 36px;
    cursor: pointer;
    color: #fff;
  }
  @media(max-width: 800px){
    footer {
      position: relative;
      padding: 80px 15px;
      bottom: 0;
      width: 100%;
    }
  }
  

